--- a/style.css
+++ b/style.css
@@ -889,6 +889,7 @@ body {
   font-size: 24px;
   padding: 20px 50px;
   margin-top: 30px;
+  animation: heartbeat 1.5s ease-in-out infinite;
 }
 
 /* MEJORAS PARA MÓVIL */
